Security sonar issues fixed
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>